package edu.ntnu.idi.bidata.group5.ui.view.components;

/**
 * StockTable class is responsible for displaying the stock table in the UI.
 * It will be used to display the stock information, such as stock prices,
 * stock trends, and other relevant information about the stocks.
 */
public class StockTable {
}
